force-app/main/default/objects/ssot__Regulation__dlm/fields/ssot__LastVersionNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastVersionNumber__c</fullName>
    <label>Last Version Number</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastVersionNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>