force-app/main/default/objects/ssot__Regulation__dlm/fields/ssot__ReferenceDocumentsLinks__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferenceDocumentsLinks__c</fullName>
    <label>Reference Documents Link</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferenceDocumentsLinks</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>