force-app/main/default/objects/ssot__Regulation__dlm/fields/ssot__RegulationManagerId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulationManagerId__c</fullName>
    <label>Regulation Manager</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulationManagerId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>