force-app/main/default/objects/ssot__Regulation__dlm/fields/ssot__RegulationManagerObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulationManagerObject__c</fullName>
    <label>Regulation Manager Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulationManagerObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>