force-app/main/default/objects/ssot__Regulation__dlm/fields/ssot__rel_1731040491535_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731040491535_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regulation_RegulationManagerId_map_I_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>Regulation_RegulationManagerId_map_I_rel</relationshipLabel>
    <relationshipName>rel_1731040491535_end</relationshipName>
    <type>Lookup</type>
</CustomField>