force-app/main/default/objects/ssot__Regulation__dlm/fields/ssot__rel_1731040556471_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731040556471_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regulation_RegulatoryAuthorityId_map_rel</label>
    <referenceTo>ssot__RegulatoryAuthority__dlm</referenceTo>
    <relationshipLabel>Regulation_RegulatoryAuthorityId_map_rel</relationshipLabel>
    <relationshipName>rel_1731040556471_end</relationshipName>
    <type>Lookup</type>
</CustomField>