force-app/main/default/objects/ssot__Regulation__dlm/fields/ssot__rel_1731041073929_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731041073929_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regulation_RegulationManagerId_map_U_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>Regulation_RegulationManagerId_map_U_rel</relationshipLabel>
    <relationshipName>rel_1731041073929_end</relationshipName>
    <type>Lookup</type>
</CustomField>