force-app/main/default/objects/ssot__Regulation__dlm/fields/ssot__Scope__c.field-meta.xml
<CustomField>
    <fullName>ssot__Scope__c</fullName>
    <label>Scope</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Scope</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>