force-app/main/default/objects/ssot__Regulation__dlm/fields/ssot__UsageType__c.field-meta.xml
<CustomField>
    <fullName>ssot__UsageType__c</fullName>
    <label>Usage Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UsageType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>